# CryptoArb

./: .gitignore  CMakeLists.txt  CryptoArb.conf  CryptoArb.db  Dockerfile  KryptoArb.conf  KryptoArb.db  README.md  compose.yaml  config.json  curl-ca-bundle.crt  docker-compose.dev.yaml  docker-compose.yaml  restart_container.sh  run.sh
cmake/Modules/: FindJansson.cmake
src/: BasicCoin.h  Bitcoin.h  main.cpp  parameters.cpp  parameters.h  quote_t.h
src/coins/: BasicCoin.h  Bitcoin.h  Ethereum.h
src/exchanges/: BasicExchange.h  binance.cpp  binance.h  kraken.cpp  kraken.h
src/utils/: db_fun.cpp  db_fun.h  hex_str.h  restapi.cpp  restapi.h  time_fun.cpp  time_fun.h  unique_json.h  unique_sqlite.h
